--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <title>Lab 7 - SPA vs. PWA</title>
 
   <!-- Web Components -->
-  <script src="assets/components/RecipeCard.js" type="module"></script>
-  <script src="assets/components/RecipeExpand.js" type="module"></script>
+  <script src="./assets/components/RecipeCard.js" type="module"></script>
+  <script src="./assets/components/RecipeExpand.js" type="module"></script>
 
   <!-- Service Worker -->
   <script src="sw.js" type="module"></script>
 
   <!-- Router -->
-  <script src="assets/scripts/Router.js" type="module"></script>
+  <script src="./assets/scripts/Router.js" type="module"></script>
 
   <!-- Main Stylesheet & Scripts -->
-  <link rel="stylesheet" href="assets/styles/main.css" />
-  <script src="assets/scripts/main.js" type="module"></script>
+  <link rel="stylesheet" href="./assets/styles/main.css" />
+  <script src="./assets/scripts/main.js" type="module"></script>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <!-- Recipes Added Here -->
       </div>
       <div class="button--wrapper">
-        <img src="assets/images/icons/arrow-down.png" alt="Arrow down" />
+        <img src="./assets/images/icons/arrow-down.png" alt="Arrow down" />
         <button>Show more</button>
       </div>
       <div class="button--horizontal-line"></div>
